Fixed hovering again, there's still an issue with how areas overlap though.

--- a/apps/frontend/src/routes/MapPage/MapPageStyles.css
+++ b/apps/frontend/src/routes/MapPage/MapPageStyles.css
@@ -7,7 +7,6 @@
     position: absolute;
     bottom: 43%;
     left: 60.5%;
-    width: 22.5%;
 }
 
 .pharmacy{
